Set SyncIo_Status correctly, and check it before reading from that syncio.

See also https://bugzilla.gnome.org/show_bug.cgi?id=646268

git-svn-id: https://devel.aqbanking.de/svn/gwenhywfar/trunk@2061 70169cfe-8b10-0410-8925-dcb4b91034d8